# embedded_systems_rp_pico

./: README.md
embedded/: CMakeLists.txt  README.md  build.bat  build_copy.bat  build_copy_vga_pio.bat  build_copy_vga_pwm.bat  build_vga_pio.bat  build_vga_pwm.bat  copy.bat
embedded/build_button_uart/elf2uf2/: Makefile
embedded/build_button_uart/pico-sdk/src/: Makefile
embedded/build_button_uart/servo_pwm/: servo_pwm.hex
embedded/build_irq/elf2uf2/: CMakeCache.txt
embedded/build_irq/servo_pwm/: servo_pwm.elf.map  servo_pwm.uf2
embedded/build_old/: CMakeCache.txt  Makefile  cmake_install.cmake
embedded/build_old/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
embedded/build_old/elf2uf2/boot_uf2_headers/: Makefile
embedded/build_old/pico-sdk/: Makefile  cmake_install.cmake
embedded/build_old/pico-sdk/docs/: Makefile
embedded/build_old/pico-sdk/src/: Makefile  cmake_install.cmake
embedded/build_old/pico-sdk/src/common/: Makefile  cmake_install.cmake
embedded/build_old/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
embedded/build_old/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
embedded/build_old/pico-sdk/tools/: Makefile
embedded/build_old/servo_pwm/: Makefile  cmake_install.cmake  servo_pwm.dis  servo_pwm.elf  servo_pwm.elf.map  servo_pwm.hex  servo_pwm.uf2
embedded/build_vga/: Makefile
embedded/build_vga/pico-sdk/src/rp2_common/: Makefile  (+1 more)
embedded/build_vga/vga/: vga.dis  vga.elf.map
embedded/doc/: Bericht.docx
embedded/old_builds/build_button_uart/: CMakeCache.txt  Makefile
embedded/old_builds/build_button_uart/pico-sdk/: Makefile  cmake_install.cmake
embedded/old_builds/build_button_uart/servo_pwm/: Makefile  servo_pwm.dis  servo_pwm.elf  servo_pwm.elf.map  servo_pwm.uf2
embedded/old_builds/build_irq/: CMakeCache.txt  cmake_install.cmake
embedded/old_builds/build_irq/servo_pwm/: cmake_install.cmake  servo_pwm.dis  servo_pwm.elf  servo_pwm.hex
embedded/old_builds/servo_pwm/: servo_pwm.h  servo_pwm_button_uart_dma.c  servo_pwm_irq.c  servo_pwm_main.c
embedded/servo_pwm/: CMakeLists.txt  servo_pwm.c  servo_pwm.h  servo_pwm_button.c  servo_pwm_button_uart.c  servo_pwm_button_uart_dma.c  servo_pwm_main.c
embedded/uml/: blockdiagram.graphml
embedded/uml/programmablauf/: VGA_PWM.pap
embedded/vga/: CMakeLists.txt  binary.py  picture.py  vga.c  vga.h  vga_button.c  vga_button.h  vga_gpio.c  vga_gpio.h  vga_pixel.c  vga_pixel.h  vga_sync.c  vga_sync.h  vga_uart.c  vga_uart.h
embedded/vga/programmablauf/: VGA.pap
embedded/vga_pio/: CMakeLists.txt  README.md  picture.h  picture.py  vga.c  vga_hsync.pio  vga_pio.c  vga_pio.h  vga_pio_dma.c  vga_pio_dma.h  vga_pio_draw.c  vga_pio_draw.h  vga_pio_gpio.c  vga_pio_gpio.h  vga_pio_uart.c  vga_pio_uart.h  vga_rgb.pio  vga_vsync.pio
embedded/vga_pwm/: CMakeLists.txt  README.md  picture.h  vga_gpio.c  vga_pwm.c  vga_pwm.h  vga_pwm_gpio.c  vga_pwm_sync.c  vga_sync.c  vga_uart.c
embedded/vga_pwm/programmablauf/: VGA.pap
hello_led_py/: main.py
(+179 files in other folders)
